syntax  = "proto3";


option java_package = "bridge";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message Binary {
    string name = 1;
    string icon = 2;
}

message Repository {
    string name = 1;
}

message User {
    string name = 1;
}

service BridgeService {
    rpc GetRepositories(google.protobuf.Empty) returns (stream Repository) {};
    rpc NewRepository(Repository) returns (google.protobuf.Empty) {}

    rpc GetUsers(google.protobuf.Empty) returns (stream User) {};

    rpc GetBinaries(Repository) returns (stream Binary) {};
    rpc ImportBinary(Repository) returns (google.protobuf.Empty) {};

}
